# cpl

./: CMakeLists.txt  README.md  check.c  save.c
0-intro/: guess.c  hello.c
1-assignments/: CMakeLists.txt  PI.c  ascii.c  change.c  equation.c  gray.c  inverse.c  planck.c  time.c  weekday.c
1-types-io/: CMakeLists.txt  admin.c  admin_teacher.c  circle.c  int.c  mol.c  sphere.c
1-types-io-std/: CMakeLists.txt  ascii.c  change.c  equation.c  gray.c  inverse.c  pi.c  planck.c  quine.c  time.c  weekday.c
10-assignments/: CMakeLists.txt  StackPour.c  file-management-system.c  linkedlist.c  string-hash.c
10-struct/: CMakeLists.txt  echo-flag.c  echo.c  musician.c  sort.c
11-linkedlist/: CMakeLists.txt  josephus-linkedlist.c
11-linkedlist/ll/: ll.c  ll.h
2-assignments/: CMakeLists.txt  calculator.c  cube.c  factorial.c  flip.c  money.c  once.c  statistics.c
2-if-for-array/: CMakeLists.txt  leap-if-else-not.c  leap-year.c  leap.c  min-of-three.c  min-of-two.c  min.c  sum.c
3-assignments/: CMakeLists.txt  binary.c  insertion-sort.c  josephus.c  mines.c  palindrome.c  series.c  sudoku.c
3-for-a-while/: CMakeLists.txt  binary-search.c  digits.c  palindrome.c  primes.c  selection-sort.c  stars-pyramid.c
4-loops/: game-of-life.c  merge.c
5-assignments/: CMakeLists.txt  absolute-prime.c  lcp.c  magic_square.c  next-permutation.c  radix.c  sum-A.c  ternary-search.c
6-assignments/: CMakeLists.txt  decomposition.c  integration.c  max.c  plagiarize.c  tile.c  triangle.c  yanghui.c
7-assignments/: CMakeLists.txt  bizuo.c  brackets.c  max_diff.c  perspective.c  pour.c  stack.c  wine.c
8-assignments/: CMakeLists.txt  interpreter.c  split.c  stringcat.c  substr.c  title.c  tokenizer.c
9-project/: 2048.c  CMakeLists.txt  README.md
FCS/: CMakeLists.txt
FCS/FCS-1/: CMakeLists.txt  binaryToInteger.c  merge-1.c  rotate.c  smallest.c
FCS/FCS-2/: CMakeLists.txt  ai.c  antwar.c  diversestring.c  powerof2.c
FCS/FCS-3/: CMakeLists.txt  Compressed-character-expansion.c  division-method.c  dizhisuoxie.c  zi-wang.c
FCS/FSC-4/: CMakeLists.txt  huiwenchuan.c  zhence.c  zuhe.c
computer-basis-test/: CMakeLists.txt  test2.c
untitled1/: CMakeLists.txt
