add_executable(ascii1 ascii.c)
add_executable(change1 change.c)
add_executable(equation1 equation.c)
add_executable(gray1 gray.c)
add_executable(inverse1 inverse.c)
add_executable(pi1 pi.c)
add_executable(planck1 planck.c)
add_executable(quine1 quine.c)
add_executable(time1 time.c)
add_executable(weekday1 weekday.c)