add_executable(plagiarize plagiarize.c)
add_executable(tile tile.c)
add_executable(yanghui yanghui.c)
add_executable(max max.c)
add_executable(integration integration.c)
add_executable(triangle triangle.c)
target_link_libraries(triangle m)
target_link_libraries(integration m)
add_executable(decomposition decomposition.c)